--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
 			<artifactId>telegrambots</artifactId>
 			<version>6.8.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
